--- a/Exercices/wheres-sausage-dog-new-game-plus/index.html
+++ b/Exercices/wheres-sausage-dog-new-game-plus/index.html
@@ -14,6 +14,7 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Selector.js"></script>
     <script src="js/Building.js"></script>
     <script src="js/City.js"></script>
     <script src="js/script.js"></script>
