Ex2: Added Comments for failed attemps

--- a/Exercices/slamina-new-game-plus/index.html
+++ b/Exercices/slamina-new-game-plus/index.html
@@ -20,6 +20,7 @@
     <script src="js/State.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/FirstInteraction.js"></script>
+    <script src="js/Discouragements.js"></script>
     <script src="js/Animaux.js"></script>
     <script src="js/script.js"></script>
   </head>
