--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -19,8 +19,11 @@
     <!-- My script(s) -->
     <script src="js/physics/Physics.js"></script>
 
+    <script src="js/objects/Thing.js"></script>
     <script src="js/objects/Static.js"></script>
+    <script src="js/objects/Map.js"></script>
     <script src="js/objects/Book.js"></script>
+    <script src="js/objects/Window.js"></script>
 
     <script src="js/states/State.js"></script>
     <script src="js/states/Game.js"></script>
