P1: the pop up windows are kinda working although I still need to prevent spawning multiple over each other
Maybe it would have been better to create brand new worlds for these windows instead of trying to deal with collisionFilters... Is it too late!?

--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -19,11 +19,12 @@
     <!-- My script(s) -->
     <script src="js/physics/Physics.js"></script>
 
+    <script src="js/windows/Window.js"></script>
+
     <script src="js/objects/Thing.js"></script>
     <script src="js/objects/Static.js"></script>
     <script src="js/objects/Map.js"></script>
     <script src="js/objects/Book.js"></script>
-    <script src="js/objects/Window.js"></script>
 
     <script src="js/states/State.js"></script>
     <script src="js/states/Game.js"></script>
