P1: added a combiné for the phone

--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -26,6 +26,7 @@
     <script src="js/objects/Map.js"></script>
     <script src="js/objects/Book.js"></script>
     <script src="js/objects/Phone.js"></script>
+    <script src="js/objects/Combine.js"></script>
 
     <script src="js/states/State.js"></script>
     <script src="js/states/Game.js"></script>
