--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -25,6 +25,7 @@
     <script src="js/objects/Static.js"></script>
     <script src="js/objects/Map.js"></script>
     <script src="js/objects/Book.js"></script>
+    <script src="js/objects/Bucket.js"></script>
     <script src="js/objects/Rat.js"></script>
     <script src="js/objects/Phone.js"></script>
     <script src="js/objects/Combine.js"></script>
