P1: Added Tableau object. Started working on the ChurchRope

--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -26,7 +26,9 @@
     <script src="js/objects/Map.js"></script>
     <script src="js/objects/Book.js"></script>
     <script src="js/objects/Bucket.js"></script>
+    <script src="js/objects/Tableau.js"></script>
     <script src="js/objects/Rat.js"></script>
+    <script src="js/objects/Rope.js"></script>
     <script src="js/objects/Phone.js"></script>
     <script src="js/objects/Combine.js"></script>
 
