--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -20,6 +20,7 @@
     <script src="js/physics/Physics.js"></script>
 
     <script src="js/windows/Window.js"></script>
+    <script src="js/windows/Timer.js"></script>
 
     <script src="js/objects/Thing.js"></script>
     <script src="js/objects/Static.js"></script>
