P1: Added sounds to the telephone. Added ambient sounds to the game.

--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -34,6 +34,7 @@
     <script src="js/objects/Combine.js"></script>
 
     <script src="js/states/State.js"></script>
+    <script src="js/states/PressAnyKey.js"></script>
     <script src="js/states/Loading.js"></script>
     <script src="js/states/Game.js"></script>
 
