P1: The game id complete!
Added more visual Assets.
Programmed the phoneCall sequence
Added End States
added Intro

--- a/Project/Project1/index.html
+++ b/Project/Project1/index.html
@@ -21,6 +21,7 @@
 
     <script src="js/windows/Window.js"></script>
     <script src="js/windows/Timer.js"></script>
+    <script src="js/windows/Mouth.js"></script>
 
     <script src="js/objects/Thing.js"></script>
     <script src="js/objects/Static.js"></script>
@@ -34,9 +35,13 @@
     <script src="js/objects/Combine.js"></script>
 
     <script src="js/states/State.js"></script>
+    <script src="js/states/Intro.js"></script>
     <script src="js/states/PressAnyKey.js"></script>
     <script src="js/states/Loading.js"></script>
     <script src="js/states/Game.js"></script>
+    <script src="js/states/EndWin.js"></script>
+    <script src="js/states/EndLost.js"></script>
+    <script src="js/states/EndTimeOut.js"></script>
 
     <script src="js/script.js"></script>
   </head>
