Ex6: fun with padding

--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -31,9 +31,12 @@ Things to do:
   </head>
 
   <body>
-    <h1>LA VIS</h1>
-    <h2>Raymond Lévesque</h2>
     <div class="poem-container">
+
+      <div class="poem-title">
+      <h1>LA VIS</h1>
+      <h2>Raymond Lévesque</h2>
+      </div>
 
       <div id="poem-left" class="poem-child">
         <p class="poem">
