Ex6: function to select random words and wrap them in <span>

--- a/Sandboxes/jQuerry/index.html
+++ b/Sandboxes/jQuerry/index.html
@@ -39,6 +39,12 @@
       </p>
     </section>
 
+    <section id="third-section">
+      <h2 class="header">Testing inputs</h2>
+      <input id="example-text-input" type="text">
+      <input id="example-button" type="button" value="clickMe!">
+    </section>
+
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
