--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -12,7 +12,9 @@ Things to do:
 - add the face of Raymond
 -stylise things lol
 
-
+REGEX:
+\b[A-zÀ-ú]{4,}\b (including accents)
+\b\w{4,}\b (Not including accents)
  -->
 
 <!DOCTYPE html>
@@ -41,39 +43,39 @@ Things to do:
       <div id="poem-left" class="poem-child">
         <p class="poem">
           <!-- <pre> -->
-          Quand ils nous l 'auront vissée,<br>
-          Cette maudite vis que l'on a<br>
-          Dans la tete<br>
-          Et qui fait que l'on finit par<br>
-          Détester ceux qu 'on aime,<br>
-          Ceux qu'on aimait,<br>
-          Pis qu'on a écœurés.<br>
+          Quand ils nous l' auront vissée , <br>
+          Cette maudite vis que l'on a <br>
+          Dans la tete <br>
+          Et qui fait que l'on finit par <br>
+          Détester ceux qu 'on aime , <br>
+          Ceux qu'on aimait , <br>
+          Pis qu'on a écœurés. <br>
           <br>
-          Quand ils nous l'avaient vissée,<br>
-          Cette maudite vis que l'on a<br>
-          Dans la tête<br>
-          Et qui fait qu'on est jamais<br>
-          Contents.<br>
-          Ce qu'on voulait, on l'a eu,<br>
-          Pis c'est pas encore ça,<br>
-          C'est jamais ça.<br>
+          Quand ils nous l'avaient vissée , <br>
+          Cette maudite vis que l'on a <br>
+          Dans la tête <br>
+          Et qui fait qu'on est jamais <br>
+          Contents. <br>
+          Ce qu'on voulait , on l'a eu , <br>
+          Pis c'est pas encore ça , <br>
+          C'est jamais ça. <br>
           <br>
-          Quand ils nous l'auront vissée,<br>
-          Cette maudite vis que l'on a<br>
-          Dans la tete...<br>
-          Et qui fait que ça nous prendrait<br>
-          Un harem, pis celui du voisin.<br>
+          Quand ils nous l' auront vissée , <br>
+          Cette maudite vis que l'on a <br>
+          Dans la tete... <br>
+          Et qui fait que ça nous prendrait <br>
+          Un harem , pis celui du voisin. <br>
           <br>
-          Quand ils nous l'auront vissée,<br>
-          Cette maudite vis que l'on a<br>
-          Dans la tete<br>
-          Et qui fait qu'il y a des zélés,<br>
-          Des maudits zélés,<br>
+          Quand ils nous l' auront vissée , <br>
+          Cette maudite vis que l'on a <br>
+          Dans la tete <br>
+          Et qui fait qu'il y a des zélés , <br>
+          Des maudits zélés , <br>
           <br>
-          Des foremans, des sous-chefs,<br>
-          Qui se prennent pour le boss<br>
-          Et qui écœurent les autres,<br>
-          Pour une petite paye.<br>
+          Des foremans , des sous-chefs , <br>
+          Qui se prennent pour le boss <br>
+          Et qui écœurent les autres , <br>
+          Pour une petite paye. <br>
           <!-- </pre> -->
         </p>
       </div>
@@ -81,34 +83,34 @@ Things to do:
       <div id="poem-right" class="poem-child">
         <p class="poem">
           <!-- <pre> -->
-          Quand ils nous l'auront vissée,<br>
-          Cette maudite vis que l'on a<br>
-          Dans la tete<br>
-          Et qui fait qu'il y a des héros,<br>
-          Des gros héros,<br>
-          Qui s'en vont dans des pays<br>
-          Qu'ils connaissent même pas<br>
-          Pour massacrer du monde,<br>
-          Au nom de toutes sortes<br>
-          De maudits devoirs<br>
-          De putains de conneries...<br>
+          Quand ils nous l' auront vissée , <br>
+          Cette maudite vis que l'on a <br>
+          Dans la tete <br>
+          Et qui fait qu'il y a des héros , <br>
+          Des gros héros , <br>
+          Qui s'en vont dans des pays <br>
+          Qu'ils connaissent même pas <br>
+          Pour massacrer du monde , <br>
+          Au nom de toutes sortes <br>
+          De maudits devoirs <br>
+          De putains de conneries... <br>
           <br>
-          Quand ils nous 1'auront vissée<br>
-          Cette maudite vis que 1'on a<br>
-          Dans la tete<br>
-          Et qui fait que tout le monde<br>
-          Baise leurs piastres.<br>
-          Ça c'est ma piastre,<br>
-          Donne-moi ma piastre,<br>
-          As-tu une piastre?<br>
-          T'as pas de piastres!<br>
-          Mange de la marde!<br>
+          Quand ils nous l' auront vissée <br>
+          Cette maudite vis que 1'on a <br>
+          Dans la tete <br>
+          Et qui fait que tout le monde <br>
+          Baise leurs piastres. <br>
+          Ça c'est ma piastre , <br>
+          Donne-moi ma piastre , <br>
+          As-tu une piastre? <br>
+          T'as pas de piastres! <br>
+          Mange de la marde! <br>
           <br>
-          Quand ils nous l'auront visée<br>
-          Cette maudite vis que 1'on a<br>
-          Dans la tete,<br>
-          On va t'y être ben!<br>
-          Sacrement, qu'on va être ben!<br>
+          Quand ils nous l' auront visée <br>
+          Cette maudite vis que 1'on a <br>
+          Dans la tete , <br>
+          On va t'y être ben! <br>
+          Sacrement , qu'on va être ben! <br>
           <!-- </pre> -->
         </p>
       </div>
