Ex6: Interval that checks inputs every 600ms

--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -49,22 +49,22 @@ REGEX:
           Et qui fait que l'on finit par <br>
           Détester ceux qu 'on aime , <br>
           Ceux qu'on aimait , <br>
-          Pis qu'on a écœurés. <br>
+          Pis qu'on a écoeurés . <br>
           <br>
           Quand ils nous l'avaient vissée , <br>
           Cette maudite vis que l'on a <br>
           Dans la tête <br>
           Et qui fait qu'on est jamais <br>
-          Contents. <br>
+          Contents . <br>
           Ce qu'on voulait , on l'a eu , <br>
           Pis c'est pas encore ça , <br>
-          C'est jamais ça. <br>
+          C'est jamais ça . <br>
           <br>
           Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
-          Dans la tete... <br>
+          Dans la tete ... <br>
           Et qui fait que ça nous prendrait <br>
-          Un harem , pis celui du voisin. <br>
+          Un harem , pis celui du voisin . <br>
           <br>
           Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
@@ -74,8 +74,8 @@ REGEX:
           <br>
           Des foremans , des sous-chefs , <br>
           Qui se prennent pour le boss <br>
-          Et qui écœurent les autres , <br>
-          Pour une petite paye. <br>
+          Et qui écoeurent les autres , <br>
+          Pour une petite paye . <br>
           <!-- </pre> -->
         </p>
       </div>
@@ -93,24 +93,24 @@ REGEX:
           Pour massacrer du monde , <br>
           Au nom de toutes sortes <br>
           De maudits devoirs <br>
-          De putains de conneries... <br>
+          De putains de conneries ... <br>
           <br>
           Quand ils nous l' auront vissée <br>
           Cette maudite vis que 1'on a <br>
-          Dans la tete <br>
+          Dans la tête <br>
           Et qui fait que tout le monde <br>
-          Baise leurs piastres. <br>
+          Baise leurs piastres . <br>
           Ça c'est ma piastre , <br>
           Donne-moi ma piastre , <br>
           As-tu une piastre? <br>
-          T'as pas de piastres! <br>
-          Mange de la marde! <br>
+          T'as pas de piastres ! <br>
+          Mange de la marde ! <br>
           <br>
           Quand ils nous l' auront visée <br>
           Cette maudite vis que 1'on a <br>
           Dans la tete , <br>
-          On va t'y être ben! <br>
-          Sacrement , qu'on va être ben! <br>
+          On va t'y être ben ! <br>
+          Sacrement , qu'on va être ben ! <br>
           <!-- </pre> -->
         </p>
       </div>
