Ex6: Added comments and I'm done! lol

--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -2,15 +2,24 @@
 La vis - Raymond Levesque
 Lucien Cusson-Fradet
 
-Things to do:
-- Display the poem
-- Make certain words half present
-- allow the user to input the real word
-- tell the user if it's right or wrong
-- Once everything has been displayed properly either play th audio of the poem or the video
+A poem by Raymond Lévesque that I particularly like has a couple of incomplete words.
+If you can manage to correct and complete the poem, a video of M. Lévesque reciting it will play.
 
-- add the face of Raymond
--stylise things lol
+Alot of time was spent trying to make my code re-usable.
+Also, "hidden" words are selected randomly everytime you load the page.
+Coding wise, I'm very happy with what I was able to acheive.
+
+Almost as usual now, I can't afford to spend more time and play with the visuals and animation. :(
+Although, I think it's still effective at the moment. I wanted it to look a bit like a page in a book.
+
+PS: French keyboard needed for accents! :/
+
+Things to do:
+OK Display the poem
+OK Make certain words half present
+OK allow the user to input the real word
+OK tell the user if it's right or wrong
+OK Once everything has been displayed properly either play th audio of the poem or the video
 
 REGEX:
 \b[A-zÀ-ú]{4,}\b (including accents)
