Ex6: Added refference

--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -14,6 +14,9 @@ Although, I think it's still effective at the moment. I wanted it to look a bit 
 
 PS: French keyboard needed for accents! :/
 
+RÉFÉRENCE:
+Raymond Lévesque, Quand Les Hommes Vivront d’amour (Montréal, Canada: Éditions TYPO, 1989), 182.
+
 Things to do:
 OK Display the poem
 OK Make certain words half present
