Ex6: fixed "tête"

--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -57,7 +57,7 @@ REGEX:
           <!-- <pre> -->
           Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
-          Dans la tete <br>
+          Dans la tête <br>
           Et qui fait que l'on finit par <br>
           Détester ceux qu 'on aime , <br>
           Ceux qu'on aimait , <br>
@@ -74,13 +74,13 @@ REGEX:
           <br>
           Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
-          Dans la tete ... <br>
+          Dans la tête ... <br>
           Et qui fait que ça nous prendrait <br>
           Un harem , pis celui du voisin . <br>
           <br>
           Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
-          Dans la tete <br>
+          Dans la tête <br>
           Et qui fait qu'il y a des zélés , <br>
           Des maudits zélés , <br>
           <br>
@@ -97,7 +97,7 @@ REGEX:
           <!-- <pre> -->
           Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
-          Dans la tete <br>
+          Dans la tête <br>
           Et qui fait qu'il y a des héros , <br>
           Des gros héros , <br>
           Qui s'en vont dans des pays <br>
@@ -120,7 +120,7 @@ REGEX:
           <br>
           Quand ils nous l' auront visée <br>
           Cette maudite vis que 1'on a <br>
-          Dans la tete , <br>
+          Dans la tête , <br>
           On va t'y être ben ! <br>
           Sacrement , qu'on va être ben ! <br>
           <!-- </pre> -->
