--- a/Exercices/raving-redactionist-plus-plus/index.html
+++ b/Exercices/raving-redactionist-plus-plus/index.html
@@ -63,7 +63,7 @@ REGEX:
           Ceux qu'on aimait , <br>
           Pis qu'on a écoeurés . <br>
           <br>
-          Quand ils nous l'avaient vissée , <br>
+          Quand ils nous l' auront vissée , <br>
           Cette maudite vis que l'on a <br>
           Dans la tête <br>
           Et qui fait qu'on est jamais <br>
