P2: Added username generator
Also puts the username in localStorage for further use

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -24,6 +24,16 @@
       userName: <input id="userName_input"></input>
       <br>
       <button id="submit_button">submit</button>
+      <br>
+      <br>
+      userName: <h2 id=generated_username><h2></h2>
+      <br>
+      <button id="generateUsername_button">Generate UserName</button>
+    </p>
+
+    <p>
+      latitude: <span id="latitude"></span>&deg;<br>
+      longitude: <span id="longitude"></span>&deg;<br>
     </p>
 
     <p>
@@ -33,5 +43,7 @@
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
+  <script src="js/usernameGenerator.js"></script>
+  <script src="js/geolocation.js"></script>
 
 </html>
