P2: got the requestData working
Taking specific data from the database (with included index) and sending it to the client

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -42,6 +42,10 @@
     </p>
 
     <p>
+      <button id="requestData_button">requestData</button>
+    </p>
+
+    <p>
       <button id="displayRecipe_button">displayRecipe</button>
     </p>
   </body>
@@ -51,5 +55,6 @@
   <script src="js/usernameGenerator.js"></script>
   <script src="js/geolocation.js"></script>
   <script src="js/sendUserData.js"></script>
+  <script src="js/requestData.js"></script>
 
 </html>
