P2: French and english language options

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -13,11 +13,17 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="js/libraries/jquery-3.6.0.min.js"></script>
+    <script src="js/libraries/jquery.MultiLanguage.js"></script>
 
 
   </head>
 
   <body>
+    <h1 id="translation_test" key="test">Hello, this is a test.</h1>
+    <p>
+      <button id="french_button">FR</button>  <button id="english_button">EN</button>
+    </p>
+
     <p>
       recipeName: <input id="recipeName_input"></input>
       <br>
@@ -56,5 +62,6 @@
   <script src="js/geolocation.js"></script>
   <script src="js/sendUserData.js"></script>
   <script src="js/requestData.js"></script>
+  <script src="js/language.js"></script>
 
 </html>
