--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -14,6 +14,7 @@
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="js/libraries/jquery-3.6.0.min.js"></script>
     <script src="js/libraries/jquery.MultiLanguage.js"></script>
+    <script src="js/libraries/mappa.js" type="text/javascript"></script>
 
 
   </head>
@@ -59,5 +60,6 @@
   <script src="js/sendUserData.js"></script>
   <script src="js/requestData.js"></script>
   <script src="js/language.js"></script>
+  <script src="js/map.js"></script>
 
 </html>
