P2: Added language button

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -28,6 +28,12 @@
       </p>
     </div>
 
+    <div class="language-container">
+      <span onclick="languageSwitch()" id="language-selector" key= "selector">
+        FR
+      </span>
+    </div>
+
     <div class="top-container">
       <div class="time-container">
         <h1 id="time">8:12</h1>
