P2: cleaned up the code and added more commenting

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -1,10 +1,25 @@
+<!--
+
+Ajoute Ton Grain de Sel
+...sur la carte!
+
+par Lucien Cusson-Fradet
+
+This is a web application that allows users to share a recipe on a map and look at what other users are sharing.
+The project was greatly inspired by the beautiful work of the people form https://clubsexu.com/
+and their project on solitary pleasures! https://clubsolo.org/
+
+Have fun and stay mof**cking polite!
+
+ -->
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no>
 
-    <title>Prototype for Recipe API</title>
+    <title>Ajoute Ton Grain de Sel</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
