P2: little fix on the geoLocation and userposition when found

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -83,6 +83,19 @@ Have fun and stay mof**cking polite!
           <br>
           <span style="color:#620500">Vous devez consentir à la géolocalisation approximative pour continuer!</span>
         </p>
+
+        <div class="snippet" data-title=".dot-pulse">
+          <div class="stage">
+            <div class="dot-pulse"></div>
+          </div>
+          <p id="geoloc-in-progress" key="getting-location">
+            géolocalisation en cours...
+          </p>
+          <p id="geoloc-done" key="got-location">
+            géolocalisation acquise!
+          </p>
+        </div>
+
         <button type="button" onclick="geolocNext();" id="geoloc-next-button" key= "geoloc-next-button">
           Oui, j'accepte!
         </button>
