P2: Added Google's reCAPTCHA

--- a/Project/Project2/server/public/index.html
+++ b/Project/Project2/server/public/index.html
@@ -27,6 +27,7 @@ Have fun and stay mof**cking polite!
     <link rel="stylesheet" href="css/jquery-ui.min.css">
 
     <!-- Library script(s) -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6LdkQtQfAAAAAM7piynbUL60f56rwt6XAfGJf1Jj"></script>
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="js/libraries/jquery-3.6.0.min.js"></script>
